// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AmeliproTransmission > Snapshots > renders the component with all properties filled in 1`] = `
<div
  class="
    amelipro-transmission
    w-100
  "
  id="modified-unique-id-container"
>
  <div class="
    amelipro-transmission__wrapper
    w-100
  ">
    <amelipro-card-stub
      bordercolor="ap-grey-lighten-2"
      bordered="true"
      cardcolor="ap-white"
      cardtitle="Modified transmission card title"
      classes="mb-6 amelipro-transmission__card"
      divider="true"
      headerrightwidth="50%"
      nocardheader="false"
      rightpart="false"
      rightpartwidth="25%"
      titlecolor="ap-grey-darken-1"
      titlelevel="2"
      uniqueid="modified-unique-id-card"
    ></amelipro-card-stub>
  </div>
  <div
    class="
      align-center
      amelipro-transmission__actions
      d-flex
      justify-space-between
    "
    id="modified-unique-id-action-wrapper"
  >
    <div class="amelipro-transmission__actions__left">
      <amelipro-btn-stub
        badge="false"
        badgebgcolor="ap-pink"
        badgecolor="ap-white"
        bordered="false"
        class="
          amelipro-transmission__print-btn
          mb-4
          text-none
        "
        color="ap-blue-darken-1"
        disabled="false"
        hovercolor="ap-blue-darken-2"
        hoverunderline="true"
        href="/modified-print-href"
        iconbgcolor="transparent"
        iconbordered="false"
        iconleft="false"
        infoblock="false"
        minheight="2.5rem"
        size="60px"
        text="true"
        textcolor="ap-white"
        to="/modified-print-to"
        type="button"
        underline="false"
        uniqueid="modified-unique-id-print-btn"
      ></amelipro-btn-stub>
    </div>
    <div class="
      amelipro-transmission__actions__right
      d-flex
      justify-end
    ">
      <amelipro-btn-stub
        badge="false"
        badgebgcolor="ap-pink"
        badgecolor="ap-white"
        bordered="true"
        class="
          amelipro-transmission__alternate-btn
          mr-2
        "
        color="ap-white"
        disabled="false"
        hovercolor="ap-blue-lighten-3"
        hoverunderline="false"
        href="/modified-modify-href"
        iconbgcolor="transparent"
        iconbordered="false"
        iconleft="false"
        infoblock="false"
        minheight="2.5rem"
        size="60px"
        text="false"
        textcolor="ap-blue-darken-1"
        to="/modified-modify-to"
        type="button"
        underline="false"
        uniqueid="modified-unique-id-alternate-btn"
      ></amelipro-btn-stub>
      <amelipro-btn-stub
        badge="false"
        badgebgcolor="ap-pink"
        badgecolor="ap-white"
        bordered="false"
        class="amelipro-transmission__confirm-btn"
        color="ap-blue-darken-1"
        disabled="false"
        hovercolor="ap-blue-darken-2"
        hoverunderline="false"
        href="/modified-confirm-href"
        iconbgcolor="transparent"
        iconbordered="false"
        iconleft="false"
        infoblock="false"
        minheight="2.5rem"
        size="60px"
        text="false"
        textcolor="ap-white"
        to="/modified-confirm-to"
        type="button"
        underline="false"
        uniqueid="modified-unique-id-confirm-btn"
      ></amelipro-btn-stub>
    </div>
  </div>
</div>
`;

exports[`AmeliproTransmission > Snapshots > renders the component with only required properties filled in 1`] = `
<div class="
  amelipro-transmission
  w-100
">
  <div class="
    amelipro-transmission__wrapper
    w-100
  ">
    <amelipro-card-stub
      bordercolor="ap-grey-lighten-2"
      bordered="true"
      cardcolor="ap-white"
      classes="mb-6 amelipro-transmission__card"
      divider="true"
      headerrightwidth="50%"
      nocardheader="false"
      rightpart="false"
      rightpartwidth="25%"
      titlecolor="ap-grey-darken-1"
      titlelevel="2"
    ></amelipro-card-stub>
  </div>
  <div class="
    align-center
    amelipro-transmission__actions
    d-flex
    justify-space-between
  ">
    <div class="amelipro-transmission__actions__left">
      <amelipro-btn-stub
        badge="false"
        badgebgcolor="ap-pink"
        badgecolor="ap-white"
        bordered="false"
        class="
          amelipro-transmission__print-btn
          mb-4
          text-none
        "
        color="ap-blue-darken-1"
        disabled="false"
        hovercolor="ap-blue-darken-2"
        hoverunderline="true"
        iconbgcolor="transparent"
        iconbordered="false"
        iconleft="false"
        infoblock="false"
        minheight="2.5rem"
        size="60px"
        text="true"
        textcolor="ap-white"
        type="button"
        underline="false"
      ></amelipro-btn-stub>
    </div>
    <div class="
      amelipro-transmission__actions__right
      d-flex
      justify-end
    ">
      <amelipro-btn-stub
        badge="false"
        badgebgcolor="ap-pink"
        badgecolor="ap-white"
        bordered="true"
        class="
          amelipro-transmission__alternate-btn
          mr-2
        "
        color="ap-white"
        disabled="false"
        hovercolor="ap-blue-lighten-3"
        hoverunderline="false"
        iconbgcolor="transparent"
        iconbordered="false"
        iconleft="false"
        infoblock="false"
        minheight="2.5rem"
        size="60px"
        text="false"
        textcolor="ap-blue-darken-1"
        type="button"
        underline="false"
      ></amelipro-btn-stub>
      <amelipro-btn-stub
        badge="false"
        badgebgcolor="ap-pink"
        badgecolor="ap-white"
        bordered="false"
        class="amelipro-transmission__confirm-btn"
        color="ap-blue-darken-1"
        disabled="false"
        hovercolor="ap-blue-darken-2"
        hoverunderline="false"
        iconbgcolor="transparent"
        iconbordered="false"
        iconleft="false"
        infoblock="false"
        minheight="2.5rem"
        size="60px"
        text="false"
        textcolor="ap-white"
        type="button"
        underline="false"
      ></amelipro-btn-stub>
    </div>
  </div>
</div>
`;
